# FluidSimulation

./: CMakePresets.json  makefile
libraries/: CMakeLists.txt  particle.cpp  particle.h
test/: CMakeLists.txt  main.cpp
